--- a/FirstHomework/app/src/main/res/layout/exerciseone_activity_main.xml
+++ b/FirstHomework/app/src/main/res/layout/exerciseone_activity_main.xml
@@ -9,50 +9,48 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textSize="24sp"
         android:layout_marginTop="16dp"
         android:text="My First Application"
-        android:textColor="#0000FF" />
+        android:textColor="#0000FF"
+        android:textSize="24sp" />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:hint="Type here some text"
-        android:textSize="18dp"
         android:textAlignment="center"
-        android:layout_marginTop="16dp"/>
+        android:textSize="18dp" />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Some Button"
-        android:textAllCaps="false"
-        android:backgroundTint="#0000FF"
         android:layout_margin="16dp"
-        />
+        android:backgroundTint="#0000FF"
+        android:text="Some Button"
+        android:textAllCaps="false" />
 
     <Switch
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Set it if you want to be happy"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
+        android:text="Set it if you want to be happy"
         tools:ignore="UseSwitchCompatOrMaterialXml" />
 
     <CheckBox
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:text="Choose it if you want to rule the world!"/>
+        android:text="Choose it if you want to rule the world!" />
 
     <ToggleButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textOn="Happy"
-        android:textOff="Sad"
-        android:textSize="64px"
         android:textColor="@color/white"
-        />
+        android:textOff="Sad"
+        android:textOn="Happy"
+        android:textSize="64px" />
 
 </LinearLayout>
