--- a/FirstHomework/app/src/main/res/layout/exerciseone_activity_main.xml
+++ b/FirstHomework/app/src/main/res/layout/exerciseone_activity_main.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -23,11 +24,12 @@
         android:textSize="18dp" />
 
     <Button
+        android:id="@+id/goToFormButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:backgroundTint="#0000FF"
-        android:text="Some Button"
+        android:text="Go to Filling Form"
         android:textAllCaps="false" />
 
     <Switch
